--- a/style.css
+++ b/style.css
@@ -414,6 +414,7 @@ body {
   opacity: 1;
   pointer-events: auto;
   scale: 1;
+  transform-origin: top;
 }
 /* Responsive */
 @media screen and (max-width: 1300px) {
